$Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $

ehcache-1.2
===========
ehcache-1.2. ehcache-1.2 represents the addition of many new features while remaining backward compatible with 1.1.

Changing the API to Object from Serializable breaks projects. Leave the existing Serializable API in place and add new constructors and methods for Object. Add getObjectValue and getObjectKey to Element. Fixes 1473833.	Greg Luck
Closing Cache does not remove reference from DiskStore, preventing Garbage Collection of DiskStore and Cache on dispose of a cache. Fixed to set Cache reference to null on dispose. Thanks to Felix Meschberger for the patch. Fixes 1474363.	Greg Luck
Closing Cache does not remove shutdown hook, preventing Garbage Collection of a Cache with a persistent DiskStore on dispose of a cache. Fixed to remove the shutdown thread after dispose. Thanks to Felix Meschberger for the patch. Fixes 1474360.	Greg Luck


ehcache-1.2rc1
==============

ehcache-1.2 release candidate 1. ehcache-1.2 represents the addition of many new features while remaining
         backward compatible with 1.1.

License updated to Apache 2.0.	Greg Luck
Following many requests, ehcache no longer requires that Elements contain Serializable keys and values. Ehcache will gracefully degrade for those operations which require Serialization. In particular the MemoryStore and event listeners can be used with Non Serializable elements. WARNING error messages are logged when an operation cannot be completed because the key or value is not Serializable.	Greg Luck
Feature Request 1458049 Wrap original exceptions during configuration. Added an intial cause Throwable field to CacheException to facilitate easier reporting without breaking pre JDK1.4 compatibility.	Greg Luck