@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Tue Apr 25 14:41:26 EST 2006
-build.number=26
+#Fri Jun 30 12:18:49 EST 2006
+build.number=27
