@@ -1,5 +1,5 @@
 name=ehcache
-version=1.2
+version=1.2.0_01
 
 # General Ant properties
 build.compiler=modern
