@@ -15,7 +15,7 @@
     </target>
 
     <!-- Use this for doing releases -->
-    <target name="build" depends="clean, checkstyle, test, dist-tgz, buildnumber"
+    <target name="build" depends="clean, checkstyle, dist-tgz, buildnumber"
             description="Builds a clean distribution"/>
 
     <!-- This is primarily used to make it easy to keep a log of commits, as this file will change for each commit -->
