@@ -409,16 +409,34 @@
       <file leaf-file-name="DiskStore.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/src/main/java/net/sf/ehcache/store/DiskStore.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="75" column="31" selection-start="2600" selection-end="2600" vertical-scroll-proportion="0.1720154">
+            <state line="75" column="31" selection-start="2601" selection-end="2601" vertical-scroll-proportion="0.1765481">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="RMIAsynchronousCacheReplicator.java" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="RMIAsynchronousCacheReplicator.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/src/main/java/net/sf/ehcache/distribution/RMIAsynchronousCacheReplicator.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="128" column="8" selection-start="5055" selection-end="5055" vertical-scroll-proportion="-1.4467266">
+            <state line="218" column="25" selection-start="8499" selection-end="8499" vertical-scroll-proportion="0.29380766">
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="build.xml" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/build.xml">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="17" column="53" selection-start="641" selection-end="641" vertical-scroll-proportion="0.15810277">
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="changes.xml" pinned="false" current="true" current-in-tab="true">
+        <entry file="file://$PROJECT_DIR$/src/changes/changes.xml">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="7" column="24" selection-start="297" selection-end="621" vertical-scroll-proportion="0.13833992">
               <folding />
             </state>
           </provider>
@@ -427,7 +445,7 @@
       <file leaf-file-name="RMICacheReplicatorTest.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/distribution/RMICacheReplicatorTest.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="662" column="16" selection-start="24189" selection-end="24189" vertical-scroll-proportion="0.33247754">
+            <state line="662" column="16" selection-start="24190" selection-end="24190" vertical-scroll-proportion="0.34123847">
               <folding />
             </state>
           </provider>
@@ -436,7 +454,7 @@
       <file leaf-file-name="FifoMemoryStore.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/src/main/java/net/sf/ehcache/store/FifoMemoryStore.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="21" column="43" selection-start="782" selection-end="782" vertical-scroll-proportion="0.13224182">
+            <state line="21" column="43" selection-start="782" selection-end="782" vertical-scroll-proportion="0.13565892">
               <folding>
                 <element signature="imports" expanded="true" />
               </folding>
@@ -447,7 +465,7 @@
       <file leaf-file-name="suppressions.xml" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/config/suppressions.xml">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="35" column="55" selection-start="1608" selection-end="1608" vertical-scroll-proportion="0.66120905">
+            <state line="35" column="55" selection-start="1608" selection-end="1608" vertical-scroll-proportion="0.6782946">
               <folding />
             </state>
           </provider>
@@ -456,7 +474,7 @@
       <file leaf-file-name="CacheTest.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/CacheTest.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="1202" column="12" selection-start="42877" selection-end="42877" vertical-scroll-proportion="0.5006418">
+            <state line="1202" column="12" selection-start="42878" selection-end="42878" vertical-scroll-proportion="0.513834">
               <folding />
             </state>
           </provider>
@@ -465,7 +483,7 @@
       <file leaf-file-name="ThreadKiller.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/ThreadKiller.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="46" column="0" selection-start="1417" selection-end="1417" vertical-scroll-proportion="0.86901766">
+            <state line="46" column="0" selection-start="1417" selection-end="1417" vertical-scroll-proportion="0.8914729">
               <folding>
                 <element signature="imports" expanded="true" />
               </folding>
@@ -476,7 +494,7 @@
       <file leaf-file-name="DiskStoreTest.java" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/DiskStoreTest.java">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="794" column="5" selection-start="27970" selection-end="27970" vertical-scroll-proportion="0.11553273">
+            <state line="794" column="5" selection-start="27970" selection-end="27970" vertical-scroll-proportion="0.11857708">
               <folding />
             </state>
           </provider>
@@ -1374,20 +1392,6 @@
     </buildFile>
   </component>
   <component name="editorHistoryManager">
-    <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/hibernate/HibernateAPIUsageTest.java">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="148" column="0" selection-start="4778" selection-end="4778" vertical-scroll-proportion="0.019762846">
-          <folding />
-        </state>
-      </provider>
-    </entry>
-    <entry file="file:///u01/work/ehcache/src/main/java/net/sf/ehcache/store/DiskStore.java">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="754" column="7" selection-start="26129" selection-end="26129" vertical-scroll-proportion="0.22266139">
-          <folding />
-        </state>
-      </provider>
-    </entry>
     <entry file="file:///u01/work/ehcache/src/test/java/net/sf/ehcache/CacheTest.java">
       <provider selected="true" editor-type-id="text-editor">
         <state line="13" column="19" selection-start="589" selection-end="589" vertical-scroll-proportion="0.256917">
@@ -1418,7 +1422,7 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/ThreadKiller.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="46" column="0" selection-start="1417" selection-end="1417" vertical-scroll-proportion="0.86901766">
+        <state line="46" column="0" selection-start="1417" selection-end="1417" vertical-scroll-proportion="0.8914729">
           <folding>
             <element signature="imports" expanded="true" />
           </folding>
@@ -1434,14 +1438,14 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/distribution/RMICacheReplicatorTest.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="662" column="16" selection-start="24189" selection-end="24189" vertical-scroll-proportion="0.33247754">
+        <state line="662" column="16" selection-start="24190" selection-end="24190" vertical-scroll-proportion="0.34123847">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/src/main/java/net/sf/ehcache/store/FifoMemoryStore.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="21" column="43" selection-start="782" selection-end="782" vertical-scroll-proportion="0.13224182">
+        <state line="21" column="43" selection-start="782" selection-end="782" vertical-scroll-proportion="0.13565892">
           <folding>
             <element signature="imports" expanded="true" />
           </folding>
@@ -1450,35 +1454,49 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/config/suppressions.xml">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="35" column="55" selection-start="1608" selection-end="1608" vertical-scroll-proportion="0.66120905">
+        <state line="35" column="55" selection-start="1608" selection-end="1608" vertical-scroll-proportion="0.6782946">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/CacheTest.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="1202" column="12" selection-start="42877" selection-end="42877" vertical-scroll-proportion="0.5006418">
+        <state line="1202" column="12" selection-start="42878" selection-end="42878" vertical-scroll-proportion="0.513834">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/src/test/java/net/sf/ehcache/DiskStoreTest.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="794" column="5" selection-start="27970" selection-end="27970" vertical-scroll-proportion="0.11553273">
+        <state line="794" column="5" selection-start="27970" selection-end="27970" vertical-scroll-proportion="0.11857708">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/src/main/java/net/sf/ehcache/store/DiskStore.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="75" column="31" selection-start="2600" selection-end="2600" vertical-scroll-proportion="0.1720154">
+        <state line="75" column="31" selection-start="2601" selection-end="2601" vertical-scroll-proportion="0.1765481">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/src/main/java/net/sf/ehcache/distribution/RMIAsynchronousCacheReplicator.java">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="128" column="8" selection-start="5055" selection-end="5055" vertical-scroll-proportion="-1.4467266">
+        <state line="218" column="25" selection-start="8499" selection-end="8499" vertical-scroll-proportion="0.29380766">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/build.xml">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="17" column="53" selection-start="641" selection-end="641" vertical-scroll-proportion="0.15810277">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/src/changes/changes.xml">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="7" column="24" selection-start="297" selection-end="621" vertical-scroll-proportion="0.13833992">
           <folding />
         </state>
       </provider>
