@@ -2,6 +2,16 @@
 <document>
     <body>
 
+        <release version="1.2.0_01" date="2006-6-30" desc="Maintenance release to harden threads from errors">
+                    <!-- Bug fixes -->
+                    <action dev="Greg Luck" type="fix">
+                        Backport from ehcache-1.2.1. All threads catch any Throwables in their main loops. Additional
+                        reporting around thread death. This fixes an issue where a VM error can cause the threads to stop.
+                        If the error is recoverable (a minority of cases) the application can now continue.
+                    </action>
+                </release>
+
+
         <release version="1.2" date="2006-4-25" desc="ehcache-1.2. ehcache-1.2 represents the addition of many new features while remaining
          backward compatible with 1.1.">
             <!-- Feature Changes over RC1-->
