@@ -1,5 +1,11 @@
 $Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $
 
+ehcache-1.2.0_01
+================
+Backport from ehcache-1.2.1. All threads catch any Throwables in their main loops. 
+Additional reporting around thread death. This fixes an issue where a VM error can cause the threads to stop.
+If the error is recoverable (a minority of cases) the application can now continue.
+
 ehcache-1.2
 ===========
 ehcache-1.2. ehcache-1.2 represents the addition of many new features while remaining backward compatible with 1.1.
